--- a/css/styles.css
+++ b/css/styles.css
@@ -4,12 +4,33 @@
     --text-color: #49241D;
 }
 
-*{
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    background-color:var(--background-color);
-    color:var(--text-color);
+
+.top_banner{
+    display:flex;
+    justify-content: space-between;
+}
+
+.logo{
+    font-family: "Updock", cursive;
+    font-weight: 400;
+    font-style: normal;
+    font-size: 48px;
+}
+
+ul{
+    list-style-type:none;
+}
+
+h1{
+    text-align:center;
+
+}
+
+.price_container{
+    display:flex;
+    gap:20px;
+    margin: 20px;
+    justify-content: space-between;
 
 }
 
