--- a/css/styles.css
+++ b/css/styles.css
@@ -16,16 +16,18 @@
 
 }
 
-.menu {
+.dropdown {
   display: flex;
   flex-direction: column;
   justify-content: space-between;
   width: 25px;
   height: 18px;
   cursor: pointer;
+  background: none;
+  border: none;
 }
 
-.menu span {
+.dropdown span {
   display: block;
   height: 3px;
   width: 100%;
@@ -34,8 +36,34 @@
   transition: all 0.3s ease;
 }
 
-.menu:hover span {
+.dropdown:hover span {
   background-color: var(--primary-pink);
+}
+
+.dropdown-content {
+    display: none;
+    position: absolute;
+    background-color: var(--background-color);
+    min-width: 200px;
+    box-shadow: 0px 8px 16px rgba(0,0,0,0.2);
+    z-index: 1000;
+    border: 1px solid var(--primary-pink);
+    border-radius: 5px;
+    top: 100%;
+    left: 0;
+}
+
+.dropdown-content a {
+    color: var(--text-color);
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block;
+    transition: background-color 0.3s ease;
+}
+
+.dropdown-content a:hover {
+    background-color: var(--primary-pink);
+    color: white;
 }
 
 .logo{
