--- a/css/styles.css
+++ b/css/styles.css
@@ -2,6 +2,7 @@
     --background-color:#f4e8e5;
     --primary-pink:#EA78B5;
     --text-color: #49241D;
+    --box-color:rgb(248, 222, 225);
 }
 
 .page{
@@ -13,6 +14,7 @@
     align-items:center;
     max-width: 450;
     position:relative;
+    margin-bottom: 30px;
 
 }
 
@@ -98,11 +100,56 @@ ul{
     list-style-type:none;
 }
 
-.price_container{
+<!--Service and Prices-->
+
+.marquee_container {
+    width: 100%;
+    overflow:hidden; /* Hides content outside the container */
+    padding: 10px 0;
+
+}
+
+.marquee_content {
+    font-family:Verdana, Geneva, Tahoma, sans-serif;
+    font-size:20px;
+    color: var(--text-color);
+    background-color: var(--box-color);
+    display: inline-block;
+    white-space: nowrap; /* Keeps text on one line */
+    animation: marquee 120s linear infinite;
+}
+
+
+@keyframes marquee {
+    0% {
+        transform: translateX(0%); /* Start off-screen to the right */
+    }
+    100% {
+        transform: translateX(-100%); /* End off-screen to the left */
+    }
+}
+
+<!--Area and Face-->
+.service_detail_container{
     display:flex;
     gap:20px;
     margin: 20px;
-    justify-content: space-between;
+    justify-content: center;
+    
+
+}
+
+.header{
+    font-weight:bold
+}
+.price_info{
+    display:flex;
+    background-color: var(--box-color);
+    gap:20px;
+    margin: 20px;
+    
+    justify-content: space-around;
+    color:var(--text-color)
 
 }
 
