--- a/css/styles.css
+++ b/css/styles.css
@@ -135,8 +135,6 @@ ul{
     gap:20px;
     margin: 20px;
     justify-content: center;
-    
-
 }
 
 .header{
@@ -148,10 +146,11 @@ ul{
     gap:20px;
     margin: 20px;
     
-    justify-content: space-around;
+    justify-content: space-between;
     color:var(--text-color)
-
 }
+
+
 
 footer{
     text-align: center;
