--- a/css/styles.css
+++ b/css/styles.css
@@ -69,10 +69,10 @@
 }
 
 .logo{
-    font-family: "Updock", cursive;
-    font-weight: 500;
+    font-family: "Montserrat", sans-serif;
+    font-weight: 400;
     font-style: normal;
-    font-size: 52px;
+    font-size: 20px;
     color:var(--text-color);
     position: absolute;
     left: 50%;
