--- a/css/styles.css
+++ b/css/styles.css
@@ -7,6 +7,9 @@
 
 .page{
     margin: 30px;
+    display:flex;
+    flex-direction: column;
+    
 }
 .top_banner{
     display:flex;
@@ -28,7 +31,6 @@
   background: none;
   border: none;
 }
-
 .dropdown span {
   display: block;
   height: 3px;
@@ -37,11 +39,9 @@
   border-radius: 2px;
   transition: all 0.3s ease;
 }
-
 .dropdown:hover span {
   background-color: var(--primary-pink);
 }
-
 .dropdown-content {
     display: none;
     position: absolute;
@@ -85,8 +85,10 @@
     border-width: 3;
     border-style: solid;
     border-color: var(--primary-pink);
+    border-radius:10px;
     text-decoration:none;
     color:var(--text-color);
+    background-color: white;
     font-family:Georgia, 'Times New Roman', Times, serif;
     font-size:10px;
 
@@ -145,12 +147,20 @@ ul{
     background-color: var(--box-color);
     gap:20px;
     margin: 20px;
-    
     justify-content: space-between;
     color:var(--text-color)
 }
 
-
+.weekly_schedule{
+    color:var(--text-color);
+    background-color: var(--box-color);
+    padding:10px;
+    border-color:var(--primary-pink);
+    border-radius: 10px;
+    font-size:12px;
+    width:200px;
+    
+}
 
 footer{
     text-align: center;
