--- a/css/styles.css
+++ b/css/styles.css
@@ -6,34 +6,38 @@
 }
 
 .page{
-    margin: 30px;
+    margin: 0;
     display:flex;
     flex-direction: column;
+    padding-top:clamp(0px, 5vw, 50px);
     
 }
 .top_banner{
     display:flex;
     justify-content: space-between;
     align-items:center;
-    max-width: 450;
-    position:relative;
-    margin-bottom: 30px;
+    margin: 30px;
+    position: relative;
 
+}
+
+.dropdown_container{
+    position: relative;
 }
 
 .dropdown {
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-  width: 25px;
-  height: 18px;
+  width: clamp(28px, 3.5vw, 40px);
+  height: clamp(16px, 2.5vw, 24px);
   cursor: pointer;
   background: none;
   border: none;
 }
 .dropdown span {
   display: block;
-  height: 3px;
+  height: clamp(1.5px, 0.3vw, 2.5px);
   width: 100%;
   background-color: var(--text-color);
   border-radius: 2px;
@@ -55,6 +59,10 @@
     left: 0;
 }
 
+.dropdown-content.show{
+    display:block;
+}
+
 .dropdown-content a {
     color: var(--text-color);
     padding: 12px 16px;
@@ -68,15 +76,38 @@
     color: white;
 }
 
+.logoImage{
+    width: 30%;
+    height: auto;
+    margin: 5px;
+}
+
+.heroimage {
+    width:100%;
+    height:auto;
+    display: block;
+    
+}
+
+.logocontainer{
+    display:flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    position:absolute;
+    left:50%;
+    transform: translateX(-50%);
+    margin:25px;
+    margin-bottom: clamp(20px, 7vw, 100px);
+}
+
+
 .logo{
     font-family: "Montserrat", sans-serif;
     font-weight: 400;
     font-style: normal;
-    font-size: 20px;
+    font-size: clamp(16px,3vw,36px);
     color:var(--text-color);
-    position: absolute;
-    left: 50%;
-    transform: translateX(-50%);
 }
 
 .booking_button{
@@ -90,7 +121,7 @@
     color:var(--text-color);
     background-color: white;
     font-family:Georgia, 'Times New Roman', Times, serif;
-    font-size:10px;
+    font-size: clamp(10px,1.5vw, 14px);
 
 }
 
