--- a/css/styles.css
+++ b/css/styles.css
@@ -25,6 +25,7 @@
 .dropdown_container{
     position: relative;
     justify-self:start;
+    font-family: "Montserrat", sans-serif;
 }
 
 .dropdown {
@@ -46,7 +47,7 @@
   transition: all 0.3s ease;
 }
 .dropdown:hover span {
-  background-color: var(--primary-pink);
+  background-color: var(--text-color);
 }
 .dropdown-content {
     display: none;
@@ -55,7 +56,7 @@
     min-width: 200px;
     box-shadow: 0px 8px 16px rgba(0,0,0,0.2);
     z-index: 1000;
-    border: 1px solid var(--primary-pink);
+    border: 1px solid var(--text-color);
     border-radius: 5px;
     top: 100%;
     left: 0;
@@ -74,7 +75,7 @@
 }
 
 .dropdown-content a:hover {
-    background-color: var(--primary-pink);
+    background-color: var(--text-color);
     color: white;
 }
 
@@ -118,15 +119,16 @@
 .booking_button{
     text-align: center;
     padding: 5px;
-    border-width: 3;
+    border-width: 0;
     border-style: solid;
     border-color: var(--primary-pink);
     border-radius:15px;
     text-decoration:none;
-    color:var(--text-color);
-    background-color: white;
-    font-family:Georgia, 'Times New Roman', Times, serif;
+    color:var(--background-color);
+    background-color:var(--text-color);
+    font-family: "Montserrat", sans-serif;
     font-size: clamp(10px,1.5vw, 14px);
+    font-weight:bold;
     white-space:nowrap;
 
 }
