Changed availability to book now

--- a/components/menu.html
+++ b/components/menu.html
@@ -8,7 +8,7 @@
         <a href="/">Home</a>
     <a href="/pricing">Services and Prices</a>
     <a href="/training">Training</a>
-    <a href="/availability">Availability</a>
+    <a href="/book_now">Book Now</a>
     <a href="/first_visit">First Visit</a>
     <a href="/skin_care">Skin Care</a>
     <a href="/contact">Contact</a>
