removed training link from menu as that won't be available right now

--- a/components/menu.html
+++ b/components/menu.html
@@ -7,7 +7,7 @@
   <div class="dropdown-content" id="servicesDropdown">
         <a href="/">Home</a>
     <a href="/pricing">Services and Prices</a>
-    <a href="/training">Training</a>
+    <!-- <a href="/training">Training</a> -->
     <a href="/book_now">Book Now</a>
     <a href="/first_visit">First Visit</a>
     <a href="/skin_care">Skin Care</a>
